--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -45,6 +45,11 @@
           <a class="nav-link" routerLink="gallery">Gallery</a>
 
         </li>
+        <li class="nav-item">
+
+          <a class="nav-link" routerLink="restuser">Rest-Users</a>
+
+        </li>
 
         <li class="nav-item">
 
