--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,19 +22,19 @@
 
         <div class="carousel-item active">
 
-          <img  src="../assets/images/pic1.png" alt="First slide" style="width: 800px; height: 280px;">
+          <img  src="./assets/images/pic1.png" alt="First slide" style="width: 800px; height: 280px;">
 
         </div>
 
         <div class="carousel-item">
 
-          <img  src="../assets/images/pic3.png" alt="Second slide" style="width: 800px; height: 280px;">
+          <img  src="./assets/images/pic3.png" alt="Second slide" style="width: 800px; height: 280px;">
 
         </div>
 
         <div class="carousel-item">
 
-          <img  src="../assets/images/pic2.webp" alt="Third slide" style="width: 800px; height: 280px;">
+          <img  src="./assets/images/pic2.webp" alt="Third slide" style="width: 800px; height: 280px;">
 
         </div>
 
