--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,18 +1,18 @@
 <div class="row">
 	<a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-		<img src="../assets/images/pic4.png" class="img-fluid" style="width: 280px; height: 280px;">
+		<img src="./assets/images/pic4.png" class="img-fluid" style="width: 280px; height: 280px;">
         <strong>
             <p>Engage</p>
         </strong>
 	</a>
 	<a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-		<img src="../assets/images/pic5.png" class="img-fluid" style="width: 280px; height: 280px;">
+		<img src="./assets/images/pic5.png" class="img-fluid" style="width: 280px; height: 280px;">
         <strong>
             <p>Learn</p>
         </strong>
 	</a>
 	<a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-		<img src="../assets/images/pic6.png" class="img-fluid" style="width: 280px; height: 280px;">
+		<img src="./assets/images/pic6.png" class="img-fluid" style="width: 280px; height: 280px;">
         <strong>
             <p>Understand</p>
         </strong>
@@ -20,19 +20,19 @@
 </div>
 <div class="row">
 	<a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-		<img src="../assets/images/pic7.png" class="img-fluid" style="width: 280px; height: 280px;">
+		<img src="./assets/images/pic7.png" class="img-fluid" style="width: 280px; height: 280px;">
         <strong>
             <p>Network</p>
         </strong>
 	</a>
 	<a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-		<img src="../assets/images/pic8.png" class="img-fluid" style="width: 280px; height: 280px;">
+		<img src="./assets/images/pic8.png" class="img-fluid" style="width: 280px; height: 280px;">
         <strong>
             <p>Quench your learning</p>
         </strong>
 	</a>
 	<a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-		<img src="../assets/images/pic9.png" class="img-fluid" style="width: 280px; height: 280px;" >
+		<img src="./assets/images/pic9.png" class="img-fluid" style="width: 280px; height: 280px;" >
         <strong>
             <p>Home learning</p>
         </strong>
