--- a/src/app/mean/mean.component.html
+++ b/src/app/mean/mean.component.html
@@ -2,7 +2,7 @@
 
 <div style="text-align: center; align-items: center;">
 
-<img src="../assets/images/mean.png" style="height: 200px; width: 400;">
+<img src="./assets/images/mean.png" style="height: 200px; width: 400;">
 
 <p>Learning the MERN stack can be a challenge, especially if you are a beginner. But if you have enough knowledge of HTML, CSS, and JavaScript and excellent resources, then you can learn the MEARN stack in no time. 
      We listed books and courses which will help you learn the MERN stack easily.</p>
