--- a/src/app/java/java.component.html
+++ b/src/app/java/java.component.html
@@ -2,7 +2,7 @@
 
 <div style="text-align: center; align-items: center;">
 
-<img src="../assets/images/java.png" style="height: 200px; width: 400;">
+<img src="./assets/images/java.png" style="height: 200px; width: 400;">
 
 <p>Java is a multi-platform, object-oriented, and network-centric language that can be used as a platform in itself. 
     It is a fast, secure, reliable programming language for coding everything from mobile apps and enterprise software to big data applications and server-side technologies.</p>
