--- a/src/app/mern/mern.component.html
+++ b/src/app/mern/mern.component.html
@@ -2,7 +2,7 @@
 
 <div style="text-align: center; align-items: center;">
 
-<img src="../assets/images/mern.png" style="height: 200px; width: 400;">
+<img src="./assets/images/mern.png" style="height: 200px; width: 400;">
 
 <p>The MEAN stack is a JavaScript-based framework for developing web applications. MEAN is named after MongoDB, Express, Angular, and Node, the four key technologies that make up the layers of the stack. MongoDB — document database. Express(.js)
 
