--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -19,13 +19,13 @@
       </div>
       <div class="row">
         <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-            <img src="../assets/images/mean.png" class="img-fluid">
+            <img src="./assets/images/mean.png" class="img-fluid">
         </a>
         <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-            <img src="../assets/images/mern.png" class="img-fluid">
+            <img src="./assets/images/mern.png" class="img-fluid">
         </a>
         <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
-            <img src="../assets/images/java.png" class="img-fluid">
+            <img src="./assets/images/java.png" class="img-fluid">
         </a>
     </div>
     </div>
