--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -209,7 +209,7 @@
   
   <div class="col-sm">
   
-    <img src="../assets/images/reg.png"
+    <img src="./assets/images/reg.png"
   
                   alt="Sample photo" class="img-fluid"
   
